--- a/layers/meta-my-layer/conf/templates/default/bblayers.conf.sample
+++ b/layers/meta-my-layer/conf/templates/default/bblayers.conf.sample
@@ -5,6 +5,7 @@ BBFILES ?= ""
 
 BBLAYERS ?= " \
   ${TOPDIR}/../layers/poky/meta \
+  ${TOPDIR}/../layers/meta-openembedded/meta-oe \
   ${TOPDIR}/../layers/meta-raspberrypi \
   ${TOPDIR}/../layers/meta-my-layer \
 "
