style: formatting & typo

--- a/layers/meta-my-layer/conf/layer.conf
+++ b/layers/meta-my-layer/conf/layer.conf
@@ -6,7 +6,7 @@ BBFILES += "${LAYERDIR}/recipes*/*/*.bb \
             ${LAYERDIR}/recipes*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "my-layer"
-BBFILE_PATTERN_my-layer := "^${LAYERDIR}/"
+BBFILE_PATTERN_my-layer = "^${LAYERDIR}/"
 BBFILE_PRIORITY_my-layer = "13"
 
 LAYERSERIES_COMPAT_my-layer = "mickledore"
