build: use max thread in default conf

--- a/layers/meta-my-layer/conf/templates/default/local.conf.sample
+++ b/layers/meta-my-layer/conf/templates/default/local.conf.sample
@@ -1,6 +1,5 @@
 MACHINE ?= "my-machine"
 DISTRO ?= "my-distro"
 
-# DL_DIR = "/some/shared/download/directory/"
-# BB_NUMBER_THREADS ?= "${@oe.utils.cpu_count()}"
-# PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
+BB_NUMBER_THREADS ?= "${@oe.utils.cpu_count()}"
+PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
