build!: migrate to kas

--- a/layers/meta-my-layer/conf/layer.conf
+++ b/layers/meta-my-layer/conf/layer.conf
@@ -9,5 +9,5 @@ BBFILE_COLLECTIONS += "my-layer"
 BBFILE_PATTERN_my-layer = "^${LAYERDIR}/"
 BBFILE_PRIORITY_my-layer = "13"
 
-LAYERSERIES_COMPAT_my-layer = "mickledore"
+LAYERSERIES_COMPAT_my-layer = "styhead walnascar"
 LAYERDEPENDS_my-layer = "core raspberrypi"
