--- a/layers/meta-my-layer/conf/machine/my-machine.conf
+++ b/layers/meta-my-layer/conf/machine/my-machine.conf
@@ -1,9 +1,5 @@
-#@TYPE: Machine
-#@NAME: My Machine
-#@DESCRIPTION: Specialisation of RaspberryPi 4 (32 bit) machine
-
-MACHINEOVERRIDES = "raspberrypi4:${MACHINE}"
-include conf/machine/raspberrypi4.conf
+MACHINEOVERRIDES =. "raspberrypi4-64:"
+require conf/machine/raspberrypi4-64.conf
 
 # https://meta-raspberrypi.readthedocs.io/en/latest/ipcompliance.html
 LICENSE_FLAGS_ACCEPTED = "synaptics-killswitch"
